# amr_class_templates

./: README.md
cpp/: CMakeLists.txt  package.xml  ttb_turn.cpp
crazyflie_lab/crazyflie_amr_cpp/: CMakeLists.txt  package.xml
crazyflie_lab/crazyflie_amr_cpp/launch/: pid_tuner_cpp.launch.py
crazyflie_lab/crazyflie_amr_cpp/src/: CMakeLists.txt  fly_node.cpp  pid_tuner.cpp  pid_tuner_answer.cpp
crazyflie_lab/crazyflie_amr_py/: package.xml  setup.cfg  setup.py
crazyflie_lab/crazyflie_amr_py/crazyflie_amr/: fly_node.py  pid_tuner_answer.py
crazyflie_lab/crazyflie_amr_py/launch/: pid_tuner_py.launch.py
crazyflie_lab/crazyflie_amr_py/src/: fly_node.py  pid_tuner.py  pid_tuner_answer.py
crazyflie_lab/crazyswarm2/crazyflie/config/: crazyflies.yaml  server.yaml  teleop.yaml
crazyflie_lab/crazyswarm2/crazyflie/launch/: launch.py  launch_amr_lab.py
crazyflie_lab/crazyswarm2/crazyflie/src/: crazyflie_server.cpp  teleop.cpp
ip_routing_scripts/: configure_ip_routing.sh  fastdds_discovery_super_client.xml  fastdds_discovery_super_client.xml.template  gen_ip_route_files.py  ip_route.sh  ip_route.sh.template  setup.bash  setup.bash.template
launch/: cpp_ttb_turn.launch.py  py_ttb_turn.launch.py
pkgs/gap_detection/: CMakeLists.txt  package.xml
pkgs/gap_detection/include/: gap_detection.h
pkgs/gap_detection/include/gap_detection/: gap_detection.h
pkgs/gap_detection/launch/: gap_detection.launch.py
pkgs/gap_detection/scripts/: get_gaps.py
pkgs/gap_detection/src/: gap_detection.cpp  get_gaps.cpp
py/: setup.py
python/: package.xml  ttb_turn.py
